chore: 部分警告代码微调